# OmniHand-Pro-2025

./: CMakeLists.txt  README.md  README.zh_CN.md  build.bat
cmake/: CheckPythonPackage.cmake  GetSerial.cmake
document/: API_CPP.md  API_PYTHON.md  API_ROS2.md
examples/: CMakeLists.txt  main.cc
node/: CMakeLists.txt  package.xml
node/node_msg/: CMakeLists.txt  package.xml
node/node_msg/msg/: ControlMode.msg  CurrentPeriod.msg  CurrentThreshold.msg  ErrorPeriod.msg  MotorErrorReport.msg  MotorVel.msg  TactileSensor.msg  TactileSensorData.msg  TemperaturePeriod.msg  TemperatureReport.msg
node/scripts/: control_mode.py  cuerrent_report.py  current_threshold.py  error_report_sub.py  left_motor_pos_publisher.py  motor_angle.py  motor_pos_pub.py  motor_pos_sub.py  motor_pos_subscriber.py  motor_vel_pub.py  motor_vel_sub.py  tactiles_sensor.py  temperature_report.py
node/src/: hand_node.cpp  hand_node.h  main.cpp
python/: CMakeLists.txt  README.md  binding.cc  pyproject.toml  setup.py
python/agibot_hand/: __init__.py  __init__.pyi
python/example/: demo_get_hardware_info.py  demo_monitor_temperature.py  demo_sensor_touch.py  demo_set_angle.py  demo_set_position.py
python/tools/: gui.py
scripts/: setup.sh
src/: CMakeLists.txt  c_agibot_hand.cc  c_agibot_hand.h  export_symbols.h  proto.h
src/can_bus_device/: c_can_bus_device.cc  c_can_bus_device.h
src/can_bus_device/socket_can/: c_can_bus_device_socket_can.cc  c_can_bus_device_socket_can.h
src/can_bus_device/zlg_usb_canfd/: c_zlg_usbcanfd_sdk.cc  c_zlg_usbcanfd_sdk.h
src/kinematics_solver/: kinematics_solver.cc  kinematics_solver.h
src/rs_485_device/: rs_485_device.cc  rs_485_device.h
